--- a/app/assets/stylesheets/arguments.css.scss
+++ b/app/assets/stylesheets/arguments.css.scss
@@ -2,7 +2,7 @@
 	
 	.error-messages-newarg{
 		.text{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 30px;
 		text-align: center;
 		margin-left: 30px;
@@ -269,7 +269,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -299,7 +299,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -363,7 +363,7 @@
 	margin-top:5px;
 	border-top: 1px dashed;
 	padding-top:5px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:18px;
 	text-align:right;
 	
@@ -402,7 +402,7 @@
 	padding-left:3px;
 	width:100px;
 	margin-bottom:10px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:14px;
 	text-align:center;
 	margin-left: 10px;
@@ -565,7 +565,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -587,7 +587,7 @@
 		color: white;
 		cursor: pointer;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -644,7 +644,7 @@
 	margin-top:5px;
 	border-top: 2px Dashed;
 	padding-top:5px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:18px;
 	text-align:right;
 	
@@ -683,7 +683,7 @@
 	padding-left:3px;
 	width:100px;
 	margin-bottom:10px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:14px;
 	text-align:center;
 	margin-left: 10px;
@@ -849,7 +849,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -870,7 +870,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -934,7 +934,7 @@
 	margin-top:5px;
 	border-top: 2px Dashed;
 	padding-top:5px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:18px;
 	text-align:right;
 	
@@ -973,7 +973,7 @@
 	padding-left:3px;
 	width:100px;
 	margin-bottom:10px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:14px;
 	text-align:center;
 	margin-left: 10px;
@@ -1137,7 +1137,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -1158,7 +1158,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -1222,7 +1222,7 @@
 	margin-top:5px;
 	border-top: 2px Dashed;
 	padding-top:5px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:18px;
 	text-align:right;
 	
@@ -1261,7 +1261,7 @@
 	padding-left:3px;
 	width:100px;
 	margin-bottom:10px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:14px;
 	text-align:center;
 	margin-left: 10px;
@@ -1400,7 +1400,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -1430,7 +1430,7 @@
 		background-color: #C9C9C9;
 		color: white;
 		cursor: pointer;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-radius:0px;
 		border: none;
@@ -1494,7 +1494,7 @@
 	margin-top:5px;
 	border-top: 1px dashed;
 	padding-top:5px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:18px;
 	text-align:right;
 	
@@ -1533,7 +1533,7 @@
 	padding-left:3px;
 	width:100px;
 	margin-bottom:10px;
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:14px;
 	text-align:center;
 	margin-left: 10px;
