--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -32,7 +32,7 @@
 		word-wrap:break-word;	
 	
 	::-webkit-input-placeholder {
-	   font-family: "gotham";
+	   font-family: "gotham-Bold";
 		font-size: 18px;
 	}
 		.reaction{
@@ -40,7 +40,7 @@
 		border: none;
 		margin: -70px 0px 0px 560px;
 		padding: 5px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 18px;
 		color: black;
 		background-color: #808080;
@@ -59,7 +59,7 @@
 
 #comment{
 	::-webkit-input-placeholder {
-	   font-family: "gotham";
+	   font-family: "gotham-Bold";
 	}
 	min-height: 55px;
 	background-color: #EEE;
@@ -91,7 +91,7 @@
 		}
 
 		#user{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:14px;
 		padding-top:8px;
 		overflow: hidden;
@@ -170,7 +170,7 @@
 	}
 	
 	#user{
-	font-family:"gotham";
+	font-family:"gotham-Bold";
 	font-size:14px;
 	padding-top:8px;
 	width: 70px;
@@ -204,7 +204,7 @@
 			margin-top: 1px;
 			margin-right: 15px;
 			padding: 5px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 18px;
 			color: black;
 			background-color: #808080;
@@ -237,7 +237,7 @@
 		}
 
 		#user{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:14px;
 		padding-top:8px;
 		width: 120px;
@@ -279,7 +279,7 @@
 			margin-top: 1px;
 			margin-right: 15px;
 			padding: 5px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 18px;
 			color: black;
 			background-color: #808080;
@@ -365,7 +365,7 @@
 
 		#user{
 		margin-left: 10px;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:14px;
 		padding-top:8px;
 		overflow: hidden;
