--- a/app/assets/stylesheets/doulins.css.scss
+++ b/app/assets/stylesheets/doulins.css.scss
@@ -87,7 +87,7 @@
 		
 		.first_user{
 		width:150px;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		text-align: center;
 		font-size:18px;
 		margin-top:7px;
@@ -109,7 +109,7 @@
 		
 		.second_user{
 		width:150px;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		text-align: center;
 		font-size:18px;
 		margin-top:7px;
@@ -138,7 +138,7 @@
 				
 		.title3{
 		text-align: left;
-		 font-family:"gotham";
+		 font-family:"gotham-Bold";
 		 line-height:20px;
 		 font-size:23px;
 		 color:#000000;
@@ -497,7 +497,7 @@
 		img { width: 42px; height:35px;}
 		
 		.name{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:18px;
 		color:#000000;
 		}
@@ -516,7 +516,7 @@
 		img { width: 42px; height:35px;}
 		
 		.name{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:18px;
 		color:#000000;
 		}
@@ -542,7 +542,7 @@
 	
 	.texte{
 	padding-top:10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	color: #000000;
 	text-align: center;
@@ -599,7 +599,7 @@
 	
 	.comment-texte1{
 	padding-top:10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	color: #000000;
 	text-align: center;
@@ -607,7 +607,7 @@
 	
 	.comment-texte2{
 	padding-top:10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	color: #000000;
 	text-align: center;
