--- a/app/assets/stylesheets/groups.css.scss
+++ b/app/assets/stylesheets/groups.css.scss
@@ -8,7 +8,7 @@
 	margin-top:10px;
 	}
 		.title{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 48px;
 		line-spacing: -25px;
 		color: black;
@@ -55,12 +55,12 @@
 			text-align: center;
 
 					::-webkit-input-placeholder {
-					   font-family: "gotham";
+					   font-family: "gotham-Bold";
 					   color: black;
 					}
 					
 					.texte1{
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 25px;
 					
 					}
@@ -109,7 +109,7 @@
 					border-radius: 0px;
 					border: none;
 					background-color: black;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 12px;
 					color: white;
 					height: 24px;
@@ -152,7 +152,7 @@
 		text-align: center;
 		
 		.title{
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			color: black;
 			font-size: 18px;
 		}
@@ -256,7 +256,7 @@
 	
 	.text3{
 	color: black;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	text-align: center;
 	font-size: 19px;
 	}
@@ -276,7 +276,7 @@
 	#profile-header2{
 	margin-top: 17px;
 	margin-bottom: 40px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	margin-left: 140px;
 	font-size: 20px;
 	padding-bottom: 20px;
@@ -337,7 +337,7 @@
 	img{width: 653px;}
 		.text{
 		margin-top: -50px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 25px;
 		color: black;
 		
@@ -386,7 +386,7 @@
 			margin-right: 10px;
 			padding-bottom: 17px;
 			margin-top: 10px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			border-bottom: 1px solid white;
 
@@ -420,7 +420,7 @@
 			margin-right: 10px;
 			padding-bottom: 10px;
 			margin-top: 10px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			border-bottom: 1px solid white;
 
@@ -504,7 +504,7 @@
 		width: 155px;
 		margin-bottom: 20px;
 		height: 28px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		padding: 7px 7px 0px 7px;
 		font-size: 16px;
 		background-color: black;
@@ -520,7 +520,7 @@
 		height: 28px;
 		color: white;
 		margin-bottom: 20px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		padding: 7px 7px 0px 7px;
 		font-size: 18px;
 		background-color: #AAD0FF;
@@ -598,7 +598,7 @@
 			.nom-user{
 			padding-left:3px;
 			width:100px;
-			font-family:"gotham";
+			font-family:"gotham-Bold";
 			font-size:14px;
 			text-align:center;
 			margin-left: 10px;
@@ -690,20 +690,20 @@
 		background-color: #C9C9C9;
 		margin-bottom: 10px;
 		width: 800px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size:18px;
 		text-align: center;
 		cursor: pointer;
 			.texte{
 				padding-top:10px;
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size:22px;
 				color: #000;
 				text-align: center;
 			}
 		.texte{
 		padding-top:10px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size:18px;
 		color: #000000;
 		text-align: center;
@@ -727,7 +727,7 @@
 	
 	#comment{
 		::-webkit-input-placeholder {
-		   font-family: "gotham";
+		   font-family: "gotham-Bold";
 		}
 		background-color: #EEE;
 		margin-left:20px;
@@ -745,7 +745,7 @@
 		margin-right: 10px;
 		margin-top: 10px;
 		height: 24px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		color: black;
 		font-size: 18px;
 		text-align: center;
@@ -762,7 +762,7 @@
 			}
 
 			#user{
-			font-family:"gotham";
+			font-family:"gotham-Bold";
 			font-size:14px;
 			padding-top:8px;
 			overflow: hidden;
