--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -15,7 +15,7 @@ header {
 			margin-top: 23px;
 		}
 		#titre{
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 48px;
 			letter-spacing: -1px;
 			color: black;
@@ -47,7 +47,7 @@ header {
 		height: 22px;
 		padding-top: 5px;
 		background-color: #AAD0FF;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 17px;
 		text-align: center;
 		margin-bottom: 15px;
@@ -97,7 +97,7 @@ header {
 		
 	.login{
 	::-webkit-input-placeholder {
-	   font-family: "gotham";
+	   font-family: "gotham-Bold";
 	   color: black;
 	}
 		.login-field{
@@ -115,7 +115,7 @@ header {
 			border-radius: 0px;
 			border: none;
 			background-color: black;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 12px;
 			color: white;
 			height: 28px;
@@ -242,7 +242,7 @@ header {
 	#main-nav {
     margin-left:0px;
 	margin-top: 10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:20px;
 	font-color: black;
 
