--- a/app/assets/stylesheets/static.css.scss
+++ b/app/assets/stylesheets/static.css.scss
@@ -55,7 +55,7 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 50px;
 		padding-top: 90px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		line-height: 36px;
 		padding-bottom: 40px;
@@ -66,7 +66,7 @@ text-align: center;
 			margin-left: 70px;
 			margin-right: 70px;
 			padding-top: 40px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 30px;
 			line-height: 30px;
 			color: #808080;
@@ -96,7 +96,7 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 50px;
 		padding-top: 90px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		line-height: 36px;
 		padding-bottom: 40px;
@@ -107,7 +107,7 @@ text-align: center;
 			margin-left: 70px;
 			margin-right: 70px;
 			padding-top: 40px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 30px;
 			line-height: 30px;
 			color: #808080;
@@ -137,7 +137,7 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 50px;
 		padding-top: 90px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		line-height: 36px;
 		padding-bottom: 40px;
@@ -148,7 +148,7 @@ text-align: center;
 			margin-left: 70px;
 			margin-right: 70px;
 			padding-top: 40px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 30px;
 			line-height: 30px;
 			color: #808080;
@@ -178,7 +178,7 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 50px;
 		padding-top: 90px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		line-height: 36px;
 		padding-bottom: 40px;
@@ -189,7 +189,7 @@ text-align: center;
 			margin-left: 70px;
 			margin-right: 70px;
 			padding-top: 40px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 30px;
 			line-height: 30px;
 			color: #808080;
@@ -220,7 +220,7 @@ text-align: center;
 			}
 
 			.nom{
-				font-family:"gotham";
+				font-family:"gotham-Bold";
 				font-size: 16px;
 				font-color: black;
 				margin-left: 10px;
@@ -236,7 +236,7 @@ text-align: center;
 			width: 150px;
 			margin-bottom: 5px;
 			margin-top: 5px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 14px;
 			border-bottom: 1px solid black;
 			
@@ -288,7 +288,7 @@ text-align: center;
 		.intro{
 		margin-left: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 20px;
 		line-height: 36px;
 		}
@@ -298,7 +298,7 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 40px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		line-height: 36px;
 		padding-bottom: 40px;
@@ -335,7 +335,7 @@ text-align: center;
 		.intro{
 		margin-left: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 20px;
 		line-height: 36px;
 		}
@@ -345,7 +345,7 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 40px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		line-height: 36px;
 		padding-bottom: 40px;
@@ -383,7 +383,7 @@ text-align: center;
 		.intro{
 		margin-left: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 20px;
 		line-height: 36px;
 		}
@@ -393,7 +393,7 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 40px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		line-height: 36px;
 		padding-bottom: 40px;
@@ -431,7 +431,7 @@ text-align: center;
 		.intro{
 		margin-left: 70px;
 		padding-top: 30px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 20px;
 		line-height: 36px;
 		}
@@ -441,7 +441,7 @@ text-align: center;
 		margin-left: 70px;
 		margin-right: 70px;
 		padding-top: 40px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		line-height: 36px;
 		padding-bottom: 40px;
@@ -484,7 +484,7 @@ text-align: center;
 		}
 		
 		.fields{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		margin-top: 15px;
 		background-color: #FFF;
 		height:40px;
@@ -494,7 +494,7 @@ text-align: center;
 		}
 		
 		.fields2{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		margin-top: 15px;
 		background-color: #FFF;
 		width: 140px;
@@ -512,7 +512,7 @@ text-align: center;
 		border: none;
 		color: white;
 		text-align: center;
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size: 16px;
 		border-radius: 0px;		
 		}
@@ -783,7 +783,7 @@ text-align: center;
 				border-bottom: 1px Dashed black;
 				padding-bottom: 10px;
 				.texte1{
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 25px;
 				}
 				.texte2{
@@ -801,7 +801,7 @@ text-align: center;
 				border-bottom: 1px Dashed black;
 								
 				.texte1{
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 25px;
 				}
 				.texte2{
@@ -819,7 +819,7 @@ text-align: center;
 				border-bottom: 1px Dashed black;
 								
 				.texte1{
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 25px;
 				}
 				.texte2{
@@ -837,7 +837,7 @@ text-align: center;
 				border-bottom: 1px Dashed black;
 				padding-bottom: 10px;
 				.texte1{
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 25px;
 				}
 				.texte2{
@@ -898,7 +898,7 @@ text-align: center;
 			margin-top: -33px;
 			margin-bottom: 15px;
 			margin-left: 260px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			width:5px;
 			cursor: pointer;
@@ -914,7 +914,7 @@ text-align: center;
 				border-bottom: 1px Dashed black;				
 
 				.texte1{
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 25px;
 				}
 				.texte2{
@@ -933,7 +933,7 @@ text-align: center;
 				border-bottom: 1px Dashed black;
 
 				.texte1{
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 25px;
 				}
 				.texte2{
@@ -997,7 +997,7 @@ text-align: center;
 			
 			
 			#fermer-explication{
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			margin-top: 5px;
 			margin-left: 70px;
@@ -1009,7 +1009,7 @@ text-align: center;
 			}
 			
 			#fermer-explication1{
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			margin-top: 5px;
 			margin-left: 70px;
@@ -1067,7 +1067,7 @@ text-align: center;
 		}
 		.titre1{
 		margin-left: 15px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 15px;
 		margin-top: 5px;
 		}
@@ -1087,7 +1087,7 @@ text-align: center;
 			.texte{
 			padding-left:4px;
 			padding-bottom:15px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 19px;
 			line-height: 22px;
 			border-bottom: 1px Solid black;
@@ -1122,7 +1122,7 @@ text-align: center;
 		}
 		
 		#fermer-explication{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		margin-top: 5px;
 		margin-left: 8px;
@@ -1131,7 +1131,7 @@ text-align: center;
 		}
 		
 		#fermer-explication1{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		margin-top: 5px;
 		margin-left: 8px;
@@ -1177,7 +1177,7 @@ text-align: center;
 	}
 	
 	#challenge-header{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 18px;
 		margin-left:193px;	
 		
@@ -1232,7 +1232,7 @@ text-align: center;
 		}
 		
 		.titre{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 26px;
 		margin-top: -40px;
 		margin-left: 70px;
@@ -1271,7 +1271,7 @@ text-align: center;
 	.nous-ecrire{
 	width: 300px;
 	height: 30px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 20px;
 	padding-top: 8px;
 	padding-left: 15px;
@@ -1285,7 +1285,7 @@ text-align: center;
 	.nous-ecrire1{
 	width: 300px;
 	height: 30px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 20px;
 	padding-top: 8px;
 	padding-left: 15px;
@@ -1299,7 +1299,7 @@ text-align: center;
 	.nous-ecrire2{
 	width: 370px;
 	height: 30px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 20px;
 	padding-top: 8px;
 	padding-left: 15px;
@@ -1320,7 +1320,7 @@ text-align: center;
 		margin-top: 30px;
 		
 		.nom{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 20px;
 		margin-right: 40px;
 		width: 200px;
@@ -1404,7 +1404,7 @@ text-align: center;
 		}
 		
 		.text{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 23px;
 		margin-left: 44px;
 		margin-top: -35px;
@@ -1413,7 +1413,7 @@ text-align: center;
 	
 	
 	.text2{
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 20px;
 	text-align: left;
 	width: 450px;
@@ -1440,7 +1440,7 @@ text-align: center;
 		}
 		
 		.text{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 23px;
 		margin-left: 44px;
 		margin-top: -35px;
@@ -1449,7 +1449,7 @@ text-align: center;
 	
 	
 	.text2{
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 20px;
 	text-align: left;
 	width: 450px;
@@ -1482,7 +1482,7 @@ text-align: center;
 		}
 		
 		.text{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 23px;
 		margin-left: 44px;
 		margin-top: -35px;
@@ -1518,7 +1518,7 @@ text-align: center;
 		}
 		
 		.text{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 23px;
 		margin-left: 45px;
 		margin-top: -35px;
@@ -1527,7 +1527,7 @@ text-align: center;
 	
 	
 	.text2{
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 20px;
 	text-align: left;
 	width: 450px;
@@ -1561,7 +1561,7 @@ text-align: center;
 	}	
 
 	#abobo{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 48px;
 		margin-top:50px;
 		width:1060px;
@@ -1570,7 +1570,7 @@ text-align: center;
 	}
 	
 	#abobo1{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 48px;
 		margin-top:50px;
 		line-height: 48px;
@@ -1613,7 +1613,7 @@ text-align: center;
 	z-index: 1;
 	
 		.titre{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		text-align: center;
 		padding-top: 40px;
@@ -1664,7 +1664,7 @@ text-align: center;
 	z-index: 1;
 	
 		.titre{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		text-align: center;
 		padding-top: 40px;
@@ -1693,7 +1693,7 @@ text-align: center;
   height: 130px;
   width: 335px;
   color: black;
-  font-family: "gotham";
+  font-family: "gotham-Bold";
   font-size: 34px;
   line-height: 40px;
   }
@@ -1719,7 +1719,7 @@ text-align: center;
 }
 
 #intro2{
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 36px;
 	width:600px;
 	text-align: center;
@@ -1747,7 +1747,7 @@ position: relative;
 z-index: 1;
 
 	.titre{
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 36px;
 	text-align: left;
 	padding-top: 100px;
@@ -1870,7 +1870,7 @@ margin-left: 470px;
 	}	
 
 	#abobo{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 48px;
 		margin-top:50px;
 		width:1060px;
@@ -1880,7 +1880,7 @@ margin-left: 470px;
 	}
 	
 	#abobo1{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 48px;
 		margin-top:50px;
 		width:510px;
@@ -1922,7 +1922,7 @@ margin-left: 470px;
 	z-index: 1;
 	
 		.titre{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		text-align: center;
 		padding-top: 40px;
@@ -1985,7 +1985,7 @@ margin-left: 470px;
 	z-index: 1;
 	
 		.titre{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		text-align: center;
 		padding-top: 40px;
@@ -2048,7 +2048,7 @@ margin-left: 470px;
 	z-index: 1;
 	
 		.titre{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		text-align: center;
 		padding-top: 40px;
@@ -2098,7 +2098,7 @@ margin-left: 470px;
 	z-index: 1;
 	
 		.titre{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 36px;
 		text-align: center;
 		padding-top: 40px;
@@ -2125,7 +2125,7 @@ margin-left: 470px;
   height: 130px;
   width: 215px;
   color: black;
-  font-family: "gotham";
+  font-family: "gotham-Bold";
   font-size: 34px;
   line-height: 40px;
   }
@@ -2147,7 +2147,7 @@ margin-left: 470px;
 		}
 		
 		.text{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 23px;
 		margin-left: 45px;
 		margin-top: -35px;
