--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -63,7 +63,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a {
 
 h1.title, h2.title, h3.title, h4.title, h5.title {
   @include border-bottom;
-	font-family: 'gotham';
+	font-family: 'gotham-Bold';
   	margin-bottom: 15px;
 	word-break:break-all;
 }
@@ -220,7 +220,7 @@ input.ajust-input, textarea.ajust-input {
 		margin-bottom:3px;
 		margin-left:25px;
 	   	 text-align: center;
-	   	 font-family:"gotham";
+	   	 font-family:"gotham-Bold";
 			
 	   	 font-size:18px;
 			.title2{
@@ -387,7 +387,7 @@ input.ajust-input, textarea.ajust-input {
 		 width: 260px;
 		 margin:-80px 0px 3px 47px;
 	   	 text-align: center;
-	   	 font-family:"gotham";
+	   	 font-family:"gotham-Bold";
 	   	 font-size:18px;
 
 	
@@ -537,7 +537,7 @@ input.ajust-input, textarea.ajust-input {
 				.title{
 				margin: -110px 10px 10px 10px; 
 				color:white;
-				font-family:"gotham";
+				font-family:"gotham-Bold";
 				font-size:18px;
 				text-align:center;
 				color: black;
