--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -35,7 +35,7 @@
 			 width: 290px;
 			 margin:30px 0px 3px 30px;
 		   	 text-align: center;
-		   	 font-family:"gotham";
+		   	 font-family:"gotham-Bold";
 		   	 font-size:18px;
 
 
@@ -146,7 +146,7 @@
 			 width: 290px;
 			 margin:30px 0px 3px 30px;
 		   	 text-align: center;
-		   	 font-family:"gotham";
+		   	 font-family:"gotham-Bold";
 		   	 font-size:18px;
 
 
@@ -257,7 +257,7 @@
 			 width: 290px;
 			 margin:30px 0px 3px 30px;
 		   	 text-align: center;
-		   	 font-family:"gotham";
+		   	 font-family:"gotham-Bold";
 		   	 font-size:18px;
 
 
@@ -368,7 +368,7 @@
 			 width: 290px;
 			 margin:30px 0px 3px 30px;
 		   	 text-align: center;
-		   	 font-family:"gotham";
+		   	 font-family:"gotham-Bold";
 		   	 font-size:18px;
 
 
