--- a/app/assets/stylesheets/cats.css.scss
+++ b/app/assets/stylesheets/cats.css.scss
@@ -54,7 +54,7 @@
 			.selector{
 			margin-top: 10px;
 			margin-bottom: 10px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			background-color: #808080;
 			border: none;
 			border-radius: 0px;
@@ -69,7 +69,7 @@
 			padding:4px;
 			color: #808080;
 			background-color: black;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 14px;
 			width: 58px;
 			margin-left: 80px;
@@ -80,7 +80,7 @@
 			.act{
 			background-color:#808080;
 			color: black;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 14px;
 			margin-left: 0px;
 			width: 68px;
@@ -90,7 +90,7 @@
 			}
 			.first_user{
 			padding-top: 5px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			text-align: center;
 			border-bottom: 5px solid white;
@@ -135,7 +135,7 @@
 			
 			.second_user{
 			padding-top: 5px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 16px;
 			text-align: center;
 			border-bottom: 5px solid white;
@@ -161,7 +161,7 @@
 				.selector{
 				margin-top: 10px;
 				margin-bottom: 10px;
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				background-color: #808080;
 				border: none;
 				border-radius: 0px;
@@ -176,7 +176,7 @@
 				padding:4px;
 				color: #808080;
 				background-color: black;
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 14px;
 				width: 58px;
 				margin-left: 80px;
@@ -187,7 +187,7 @@
 				.act{
 				background-color:#808080;
 				color: black;
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 14px;
 				margin-left: 0px;
 				width: 68px;
@@ -216,7 +216,7 @@
 			margin-left:0px;
 			
 			#ld-milieu-1{
-			font-family:"gotham";
+			font-family:"gotham-Bold";
 			font-size: 23px;
 			font-color: black;
 			line-height: 25px;
@@ -282,7 +282,7 @@
 					width:190px;
 					background-color: #808080;
 					height: 35px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 18px;
 					color: white;
 					text-align: center;
@@ -313,7 +313,7 @@
 					width:190px;
 					background-color: #AAD0FF;
 					height: 35px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 18px;
 					color: white;
 					text-align: center;						
@@ -345,7 +345,7 @@
 					width:190px;
 					background-color: #808080;
 					height: 35px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 18px;
 					color: white;
 					text-align: center;
@@ -377,7 +377,7 @@
 					width:190px;
 					background-color: #FF6969;
 					height: 35px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 18px;
 					color: white;
 					text-align: center;						
@@ -465,7 +465,7 @@
 	background-color: #000;
 	height: 24px;
 	width: 80px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 16px;
 	color: #FFF;
 	padding-left: 8px;
@@ -571,7 +571,7 @@
 		img { width: 42px; height:35px;}
 		
 		.name{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:18px;
 		color:#000000;
 		}
@@ -590,7 +590,7 @@
 		img { width: 42px; height:35px;}
 		
 		.name{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:18px;
 		color:#000000;
 		}
