--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -93,7 +93,7 @@
 		margin-left:40px;
 				
 		#title2{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 23px;
 		text-align: left;
 		line-height: 23px;
@@ -144,7 +144,7 @@
 		}
 		
 		.vote2{
-			font-family:"gotham";
+			font-family:"gotham-Bold";
 			font-size:25px;
 
 		}
@@ -192,7 +192,7 @@
 		.suissse{
 		margin-left:177px;
 		margin-top: -3px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 10px;
 		}
 
@@ -456,7 +456,7 @@
 	background-color: #C9C9C9;
 	margin-bottom: 10px;
 	width: 780px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	text-align: center;
 	cursor: pointer;
@@ -472,7 +472,7 @@
 	}
 	
 	.vote2{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:25px;
 
 	}
@@ -568,14 +568,14 @@
 	
 		.texte{
 			padding-top:10px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size:22px;
 			color: #000;
 			text-align: center;
 		}
 	.texte-newarg{
 	padding-top:10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	color: #000000;
 	text-align: center;
@@ -587,7 +587,7 @@
 	
 	.texte2-newarg{
 	padding-top:10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	color: #000000;
 	text-align: center;
@@ -733,7 +733,7 @@ label img {
 		width: 770px;
 
 		::-webkit-input-placeholder {
-		   font-family: "gotham";
+		   font-family: "gotham-Bold";
 			font-size: 19px;
 			letter-spacing: 1px;
 		}
@@ -744,7 +744,7 @@ label img {
 		border-radius: 0px;
 		width: 750px;
 		height: 38px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 20px;
 		font-style: italic;
 		color: black;
@@ -797,7 +797,7 @@ label img {
                 
 					.intro{
 					padding-top:5px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					color: white;
 					font-size: 18px;
 					padding-left: 10px;
@@ -822,11 +822,11 @@ label img {
 
 				#rajouter-image{
 				margin-left:0px;
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				
 					.field-image{
 					border-radius:0px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 13px;
 					}
 					
@@ -837,7 +837,7 @@ label img {
 				width: 370px;
 
 				::-webkit-input-placeholder {
-				   font-family: "gotham";
+				   font-family: "gotham-Bold";
 					font-size: 22px;
 					letter-spacing: 0px;
 				}
@@ -872,7 +872,7 @@ label img {
 	background-color: black;
 	text-align: center;
 	color: white;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 22px;
 	width: 380px;
 	padding-top: 0px;
@@ -890,7 +890,7 @@ label img {
 	
 	.texte{
 	padding-top:10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	color: #000000;
 	text-align: center;
@@ -1166,7 +1166,7 @@ border-image: url(border2.png) 13 fill repeat;
 	margin-left:55px;
 			
 	#title2{
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 20px;
 	text-align: left;
 	line-height: 23px;
@@ -1215,7 +1215,7 @@ border-image: url(border2.png) 13 fill repeat;
 	}
 	
 	.vote2{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:25px;
 
 	}
@@ -1253,7 +1253,7 @@ border-image: url(border2.png) 13 fill repeat;
 	.suissse{
 	margin-left:182px;
 	margin-top: -3px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size: 10px;
 	}
 	
@@ -1430,7 +1430,7 @@ border-image: url(border2.png) 13 fill repeat;
 			margin-left:40px;
 
 			#title2{
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 23px;
 			text-align: left;
 			line-height: 23px;
@@ -1481,7 +1481,7 @@ border-image: url(border2.png) 13 fill repeat;
 			}
 
 			.vote2{
-				font-family:"gotham";
+				font-family:"gotham-Bold";
 				font-size:25px;
 
 			}
@@ -1529,7 +1529,7 @@ border-image: url(border2.png) 13 fill repeat;
 			.suissse{
 			margin-left:177px;
 			margin-top: -3px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size: 10px;
 			}
 
@@ -1814,7 +1814,7 @@ border-image: url(border2.png) 13 fill repeat;
 	background-color: #C9C9C9;
 	margin-bottom: 10px;
 	width: 965px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	text-align: center;
 	cursor: pointer;
@@ -1830,7 +1830,7 @@ border-image: url(border2.png) 13 fill repeat;
 	}
 	
 	.vote2{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size:25px;
 
 	}
@@ -1926,14 +1926,14 @@ border-image: url(border2.png) 13 fill repeat;
 	
 		.texte{
 			padding-top:10px;
-			font-family: "gotham";
+			font-family: "gotham-Bold";
 			font-size:22px;
 			color: #000;
 			text-align: center;
 		}
 	.texte-newarg{
 	padding-top:10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	color: #000000;
 	text-align: center;
@@ -1945,7 +1945,7 @@ border-image: url(border2.png) 13 fill repeat;
 	
 	.texte2-newarg{
 	padding-top:10px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	font-size:18px;
 	color: #000000;
 	text-align: center;
