--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -45,7 +45,7 @@
 			img{width: 653px;}
 				.text{
 				margin-top: -50px;
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 25px;
 				color: black;		
 				}
@@ -103,7 +103,7 @@
 					margin-right: 10px;
 					padding-bottom: 17px;
 					margin-top: 10px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 16px;
 					border-bottom: 1px solid white;
 
@@ -137,7 +137,7 @@
 					margin-right: 10px;
 					padding-bottom: 10px;
 					margin-top: 10px;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 16px;
 					border-bottom: 1px solid white;
 
@@ -285,7 +285,7 @@
 				}
 
 				.vote2{
-					font-family:"gotham";
+					font-family:"gotham-Bold";
 					font-size:25px;
 
 				}
@@ -333,7 +333,7 @@
 				.suissse{
 				margin-left:167px;
 				margin-top: -3px;
-				font-family: "gotham";
+				font-family: "gotham-Bold";
 				font-size: 10px;
 				}
 
