--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -151,7 +151,7 @@
 #profile-header{
 	margin-top: 17px;
 	margin-bottom: 40px;
-	font-family: "gotham";
+	font-family: "gotham-Bold";
 	margin-left: 40px;
 	margin-right: 45px;
 	font-size: 20px;
@@ -214,7 +214,7 @@
 	}
 	
 	#nom-profile{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size: 16px;
 		font-color: black;
 		margin-left: 10px;
@@ -295,7 +295,7 @@
 
 		
 		.boutons-sociaux-image{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 13px;
 		margin-bottom: 15px;
 		cursor: pointer;
@@ -332,7 +332,7 @@
 		width: 150px;
 		margin-bottom: 5px;
 		margin-top: 5px;
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 16px;
 		border-bottom: 1px solid white;
 		
@@ -400,7 +400,7 @@
 	}
 	
 	.nom{
-		font-family:"gotham";
+		font-family:"gotham-Bold";
 		font-size: 16px;
 		font-color: black;
 		width: 150px;
@@ -438,7 +438,7 @@
 	margin-top:10px;
 	}
 		.title{
-		font-family: "gotham";
+		font-family: "gotham-Bold";
 		font-size: 48px;
 		line-spacing: -25px;
 		color: black;
@@ -507,12 +507,12 @@
 			text-align: center;
 
 					::-webkit-input-placeholder {
-					   font-family: "gotham";
+					   font-family: "gotham-Bold";
 					   color: black;
 					}
 					
 					.texte1{
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 25px;
 					
 					}
@@ -552,7 +552,7 @@
 					border-radius: 0px;
 					border: none;
 					background-color: black;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 12px;
 					color: white;
 					height: 24px;
@@ -576,12 +576,12 @@
 			margin-top: 15px;
 			text-align: center;
 					::-webkit-input-placeholder {
-					   font-family: "gotham";
+					   font-family: "gotham-Bold";
 					   color: black;
 					}
 					
 					.texte1{
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 27px;
 					
 					}
@@ -621,7 +621,7 @@
 					border-radius: 0px;
 					border: none;
 					background-color: black;
-					font-family: "gotham";
+					font-family: "gotham-Bold";
 					font-size: 12px;
 					color: white;
 					height: 24px;
