--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -384,7 +384,7 @@
 						<div id="start">C'est ton tour !</div>
 						<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 6 %>
 					<% else %>
-						<div id="start1"><%= link_to("Il faut valider l'argument. Il sera ensuite non-modifiable.".html_safe,
+						<div id="start1"><%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
 				              finish_challenge_path(@challenge) ,:method => :post) %></div>
 						<%= render "shared/argument_contre_badge", argument: @challenge.sixth_argument %>
 					<% end %>
