--- a/app/views/tour_mailer/votre_tour.html.erb
+++ b/app/views/tour_mailer/votre_tour.html.erb
@@ -8,7 +8,7 @@
 	#main {border: 20px Solid #aad0ff;}
 	img {display: block;}
 	#top-message p, #bottom-message p {color: #3f4042; font-size: 12px; font-family: Arial, Helvetica, sans-serif; }
-	#header h1 {color: #000000 !important; font-family: "gotham"; font-size: 24px; margin-bottom: 0!important; padding-bottom: 0; }
+	#header h1 {color: #000000 !important; font-family: "gotham-Bold"; font-size: 24px; margin-bottom: 0!important; padding-bottom: 0; }
 	#header h2 {color: #ffffff !important; font-family: Arial, Helvetica, sans-serif; font-size: 24px; margin-bottom: 0 !important; padding-bottom: 0; }
 	#header p {color: #ffffff !important; font-family: "Lucida Grande", "Lucida Sans", "Lucida Sans Unicode", sans-serif; font-size: 12px;  }
 	h1, h2, h3, h4, h5, h6 {margin: 0 0 0.8em 0;}
@@ -87,7 +87,6 @@
 			
 		</tr>
 		<tr>
-			<td height="30"><img src="http://dummyimage.com/570x30/fff/fff" /></td>
 		</tr>
 		
 
