--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -450,6 +450,7 @@
 	}
 	}
 	
+	
 	#votervoter{
 	margin-left:162px;
 	height:40px;
@@ -460,6 +461,27 @@
 	font-size:18px;
 	text-align: center;
 	cursor: pointer;
+	
+	
+	#votervoter1{
+	margin-left:162px;
+	height:40px;
+	background-color: #C9C9C9;
+	margin-bottom: 10px;
+	width: 780px;
+	font-family: "gotham-Bold";
+	font-size:18px;
+	text-align: center;
+	cursor: pointer;
+	
+		.texte-newarg{
+		padding-top:10px;
+		font-family: "gotham-Bold";
+		font-size:18px;
+		color: #000000;
+		text-align: center;
+		}
+	}
 	
 	#vote{
 	height: 35px;
