--- a/app/views/challenges/_british.html.erb
+++ b/app/views/challenges/_british.html.erb
@@ -627,7 +627,7 @@
 							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 1 %>
 						<% else %>
-						<div id="start2">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
+						<div id="start2">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 											<%= render "shared/argument_badge", argument: @challenge.first_argument %>
 						<% end %>
@@ -647,7 +647,7 @@
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 2 %>
 						<% else %>
 
-							<div id="start1">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 								<%= render "shared/argument_contre_badge", argument: @challenge.second_argument %>
 						<% end %>
@@ -667,7 +667,7 @@
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 3 %>
 						<% else %>
 
-							<div id="start2">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start2">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_badge", argument: @challenge.third_argument %>
 						<% end %>
@@ -686,7 +686,7 @@
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 4 %>
 						<% else %>
 
-							<div id="start1">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_contre_badge", argument: @challenge.fourth_argument %>
 						<% end %>
@@ -704,7 +704,7 @@
 							<div id="start3">C'est ton tour !</div>
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 5 %>
 						<% else %>
-						<div id="start2">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
+						<div id="start2">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 											<%= render "shared/argument_fc1_badge", argument: @challenge.fifth_argument %>
 						<% end %>
@@ -724,7 +724,7 @@
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 6 %>
 						<% else %>
 
-							<div id="start1">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 								<%= render "shared/argument_fc2_badge", argument: @challenge.sixth_argument %>
 						<% end %>
@@ -744,7 +744,7 @@
 							<%= render "shared/argument_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 7 %>
 						<% else %>
 
-							<div id="start2">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start2">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
 					              next_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_fc1_badge", argument: @challenge.seventh_argument %>
 						<% end %>
@@ -763,7 +763,7 @@
 							<%= render "shared/argument_contre_form", argumentable: @challenge, argument: @challenge.arguments.new, position: 8 %>
 						<% else %>
 
-							<div id="start1">	<%= link_to("Cliquer ici pour valider. Il sera ensuite non-modifiable.".html_safe,
+							<div id="start1">	<%= link_to("Il faut valider votre argument. Il sera ensuite non-modifiable.".html_safe,
 					              finish_challenge_path(@challenge) ,:method => :post) %></div>
 							<%= render "shared/argument_fc2_badge", argument: @challenge.eighth_argument %>
 						<% end %>
