--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -215,7 +215,7 @@
 				   			<% end %>
 				    	</div>
 
-						<div class="row" id="votervoter1">
+						<div class="row" id="votervoter">
 							<div class="texte-newarg">Contribue au débat!</div>
 						</div>
 					
