--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -1830,6 +1830,18 @@ border-image: url(border2.png) 13 fill repeat;
 	}
 	}
 	
+	#votervoter1{
+	margin-left:70px;
+	height:40px;
+	background-color: #C9C9C9;
+	margin-bottom: 10px;
+	width: 965px;
+	font-family: "gotham-Bold";
+	font-size:18px;
+	text-align: center;
+	cursor: pointer;
+	
+	
 	#votervoter{
 	margin-left:70px;
 	height:40px;
@@ -1840,6 +1852,15 @@ border-image: url(border2.png) 13 fill repeat;
 	font-size:18px;
 	text-align: center;
 	cursor: pointer;
+		
+		.texte-newarg{
+		padding-top:10px;
+		font-family: "gotham-Bold";
+		font-size:18px;
+		color: #000000;
+		text-align: center;
+		}	
+	}
 	
 	#vote{
 	height: 35px;
