--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -451,23 +451,19 @@
 	}
 	
 	#votervoter1{
-	margin-left:162px;
-	height:40px;
-	background-color: #C9C9C9;
-	margin-bottom: 10px;
-	width: 780px;
-	font-family: "gotham-Bold";
-	font-size:18px;
-	text-align: center;
-	cursor: pointer;
-	
-		.texte-newarg{
-		padding-top:10px;
+		margin-left:402px;
+		height:30px;
+		background-color: #AAD0FF;
+		margin-bottom: 0px;
+		margin-top:-10px;
+		width: 220px;
 		font-family: "gotham-Bold";
 		font-size:18px;
-		color: #000000;
 		text-align: center;
-		}
+		cursor: pointer;
+		border-radius: 0px;
+		color: black;
+		padding-top:10px;
 	}
 	
 	#votervoter{
