--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -199,6 +199,10 @@
  							Contribuer plus tard
 						</div>
 						
+						<div class="gauche" id="votervoter1">
+ 							Contribuer ici
+						</div>
+						
 						<div class="row" id="box-argument">
 							
 				   			<% if @debate.valeur_vote(current_user) == 1.0 %>
