--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -451,7 +451,7 @@
 	}
 	
 	#votervoter1{
-		margin-left:402px;
+		margin-left:432px;
 		height:30px;
 		background-color: #AAD0FF;
 		margin-bottom: 0px;
@@ -633,7 +633,7 @@
 	}
 	
 	#votervoter2{
-		margin-left:402px;
+		margin-left:432px;
 		height:30px;
 		background-color: #AAD0FF;
 		margin-bottom: 0px;
@@ -1826,23 +1826,19 @@ border-image: url(border2.png) 13 fill repeat;
 	}
 	
 	#votervoter1{
-	margin-left:70px;
-	height:40px;
-	background-color: #C9C9C9;
-	margin-bottom: 10px;
-	width: 965px;
-	font-family: "gotham-Bold";
-	font-size:18px;
-	text-align: center;
-	cursor: pointer;
-		
-			.texte-newarg{
-			padding-top:10px;
-			font-family: "gotham-Bold";
-			font-size:18px;
-			color: #000000;
-			text-align: center;
-			}	
+		margin-left:432px;
+		height:30px;
+		background-color: #AAD0FF;
+		margin-bottom: 0px;
+		margin-top:-10px;
+		width: 220px;
+		font-family: "gotham-Bold";
+		font-size:18px;
+		text-align: center;
+		cursor: pointer;
+		border-radius: 0px;
+		color: black;
+		padding-top:10px;
 	}
 	
 	#votervoter{
@@ -2014,7 +2010,7 @@ border-image: url(border2.png) 13 fill repeat;
 	}
 
 	#votervoter2{
-		margin-left:402px;
+		margin-left:432px;
 		height:30px;
 		background-color: #AAD0FF;
 		margin-bottom: 0px;
